# zabic

./: CMakeLists.txt  README.md  TODO.txt  zabic.h
headers/: game.h  game_object.h  globals.h  graphics.h  input.h  utils.h
src/: game.cpp  game_object.cpp  graphics.cpp  input.cpp  main.cpp
